--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="row">
             <div class="col-sm-4 text-center">
-                <h3>Your Remaining Health</h3>
+                <h3 id="you-health">Your Remaining Health: </h3>
             </div>
             <div class="col-sm-4 text-center">
                 <h4 id="damage-to-him">Damage caused by your attack: </h4>
@@ -36,12 +36,12 @@
                 <!-- <h4 id=></h4> -->
             </div>
             <div class="col-sm-4 text-center">
-                <h3>Your opponent's health</h3>
+                <h3 id="him-health">Your opponent's health: </h3>
             </div>
         </div>
         <div class="row">
             <div id="button-div" class="col-sm-12">
-                <button class="btn btn-lg btn-success" onclick="attack()">Attack!</button>
+                <button class="btn btn-lg btn-success">Attack!</button>
             </div>
         </div>
         <div class="row">
